<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.5</version>
        <relativePath/>
    </parent>

    <groupId>com.toshiakiezaki.example</groupId>
    <artifactId>spring-opentelemetry-example</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>Spring OpenTelemetry Example</name>
    <description>Example project using OpenTelemetry as observability tool</description>
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-r2dbc</artifactId>
            <scope>compile</scope>
        </dependency>
        <!--
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>r2dbc-postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.1.5</version>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>0.9.28</version>
                <configuration>
                    <buildArgs>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.Level</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.classic.Logger</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.CoreConstants</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.status.InfoStatus</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.status.StatusBase</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.util.Loader</buildArg>
                        <buildArg>--initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter</buildArg>
                        <buildArg>--initialize-at-build-time=org.slf4j.LoggerFactory</buildArg>
                        <buildArg>--initialize-at-run-time=ch.qos.logback.classic.PatternLayout</buildArg>
                        <buildArg>--initialize-at-run-time=io.netty.handler.codec.http2.CleartextHttp2ServerUpgradeHandler</buildArg>
                        <buildArg>--initialize-at-run-time=io.netty.handler.codec.http2.Http2CodecUtil</buildArg>
                        <buildArg>--initialize-at-run-time=io.netty.handler.codec.http2.Http2ServerUpgradeCodec</buildArg>
                        <buildArg>--initialize-at-run-time=io.netty.handler.ssl.BouncyCastleAlpnSslUtils</buildArg>
                        <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                    </buildArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    <includes>
                        <include>**/*UnitTest.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*IntegrationTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <configuration>
                            <configuration>
                                <includes>
                                    <include>**/*IntegrationTest.java</include>
                                </includes>
                                <excludes>
                                    <exclude>**/*UnitTest.java</exclude>
                                </excludes>
                            </configuration>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
